--- a/views/layout/main.pug
+++ b/views/layout/main.pug
@@ -1,11 +1,10 @@
 doctype html
 html
 head
+    link(rel="stylesheet", href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css", integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p", crossorigin="anonymous")
     title CTube
 body
-    header
-        h1 Hellow! 
+    include ../partials/header
     main 
         block content 
-    footer
-        span &copy; 2021 KG
+    include ../partials/footer
