--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,4 +1,4 @@
 footer.footer
     .footer_icon
         i.fas.fa-video(style={size:5})
-    span.footer_text &copy;CTube #{new Date().getFullYear()}
+    span.footer_text &copy;#{siteName} #{new Date().getFullYear()}
