--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,9 +1,13 @@
 header.header 
     .header_column 
-        i.fas.fa-video
+        a(href=routes.home)
+            i.fas.fa-video 
+    .header_column
+        form(action=routes.search, method="get")
+            input(type="text", name="term", placeholder="insert words") 
     .header_column
         ul 
             li 
-                a(href="#") Join 
+                a(href=routes.join) Join 
             li 
-                a(href="#") Log in
+                a(href=routes.login) Log in
