--- a/views/login.pug
+++ b/views/login.pug
@@ -1,10 +1,11 @@
 extends layout/main
 
 block content
-    form(action="/login", method="post") 
-        input(type="email", name="Email")
-        br
-        input(type="password", name="PassWord")
-        br
-        input(type="button", value="로그인")
-    include partials/socialLogin
+    .form-container
+        form(action=routes.login, method="post") 
+            input(type="email", name="Email")
+            br
+            input(type="password", name="PassWord")
+            br
+            input(type="button", value="로그인")
+        include partials/socialLogin
