--- a/views/join.pug
+++ b/views/join.pug
@@ -4,7 +4,7 @@ block content
     .form-container
         form(action=routes.join, method="post")
             input(type="text", name="name", placeholder="Insert your Name")
-            input(type="email", name="mail", placeholder="Insert your Email")
+            input(type="email", name="email", placeholder="Insert your Email")
             input(type="password", name="password", placeholder="Insert your Password")
             input(type="password", name="password2", placeholder="Verify Password")
             input(type="submit", value="회원가입")
