--- a/views/login.pug
+++ b/views/login.pug
@@ -3,9 +3,9 @@ extends layout/main
 block content
     .form-container
         form(action=routes.login, method="post") 
-            input(type="email", name="Email")
+            input(type="email", name="email")
             br
-            input(type="password", name="PassWord")
+            input(type="password", name="password")
             br
-            input(type="button", value="로그인")
+            input(type="submit", value="로그인")
         include partials/socialLogin
