--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -7,7 +7,16 @@ header.header
             input(type="text", name="term", placeholder="insert words") 
     .header_column
         ul 
-            li 
-                a(href=routes.join) Join 
-            li 
-                a(href=routes.login) Log in
+            if !user.isAuthenticated
+                li 
+                    a(href=routes.join) Join 
+                li 
+                    a(href=routes.login) Log in
+            else 
+                li 
+                    a(href=routes.logout) Logout
+                li
+                    a(href=routes.upload) Upload
+                li 
+                    a(href=routes.users + routes.userDetail(user.id)) UserDetail
+        
