--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -16,7 +16,7 @@ header.header
                 li 
                     a(href=routes.logout) Logout
                 li
-                    a(href=routes.upload) Upload
+                    a(href=routes.videos+routes.upload) Upload
                 li 
                     a(href=routes.users + routes.userDetail(user.id)) UserDetail
         
