--- a/views/videosupload.pug
+++ b/views/videosupload.pug
@@ -2,9 +2,9 @@ extends layout/main
 
 block content
     .form-container
-        form(action=routes.videos+routes.upload, method="post")
+        form(action=routes.videos+routes.upload, method="post", enctype="multipart/form-data")
             label(for="file") File
-            input(type="file", id="file", name="file")
-            input(type="text", name="title", placeholder="Title")
-            textarea(name="desription", cols="30", rows="10", placeholder="Desription")
+            input(type="file", id="file", name="videoFile", required=true, accept="video/*")
+            input(type="text", name="title", placeholder="Title", required=true)
+            textarea(name="description", cols="30", rows="10", placeholder="Desription", required=true)
             input(type="submit", value="업로드")
