--- a/views/videosEdite.pug
+++ b/views/videosEdite.pug
@@ -6,5 +6,5 @@ block content
             input(type="text", name="title", value=`${video.title}`)
             textarea(name="description", cols="30", rows="10")=video.description
             input(type="submit", value="수정하기")
-        a.form-container__link.form-container__link--delete(href=routes.videos+routes.videoDelete)
+        a.form-container__link.form-container__link--delete(href=routes.videos+routes.videoDelete(video._id))
             | 삭제하기 
