--- a/views/search.pug
+++ b/views/search.pug
@@ -10,5 +10,6 @@ block content
             +videoBlock({
             title : item.title,
             file : item.file,
-            views : item.views
+            views : item.views,
+            id : item._id
             })
