--- a/views/layout/main.pug
+++ b/views/layout/main.pug
@@ -2,9 +2,11 @@ doctype html
 html
 head
     link(rel="stylesheet", href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css", integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p", crossorigin="anonymous")
+    link(rel="stylesheet", href="/static/styles.css")
     title #{pageTitle} | #{siteName}
 body
     include ../partials/header
     main 
         block content 
     include ../partials/footer
+    script(src="/static/main.js") 
