--- a/assets/scss/partials/header.scss
+++ b/assets/scss/partials/header.scss
@@ -10,7 +10,7 @@
         max-width: 1200px;
         .header_column{
             i{
-                color:rgb(65, 224, 171);
+                color: $iconColor;
                 font-size: 40px;
             }
 
@@ -18,6 +18,36 @@
             &:nth-child(2){
                 width: 100%;
                 justify-self: center;
+            }
+
+            //userInterface 우측단
+            &:last-child{
+                justify-self: end;
+            }
+            form{
+                width: 100%;
+                input{
+                    padding: 9px 10px;
+                    width: 100%;
+                    border-radius: 3px;
+                    font-size: 17px;
+                    font-weight: 500;
+                    color:$inputFontColor;
+                    &::placeholder{
+                        font-weight: 200;
+                        color: rgb(121, 118, 118);
+                    }
+                } 
+            }
+            ul{
+                display: flex;
+                color: white;
+                font-weight: 600;
+
+                //ul의 마지막 li 요소가 아니라면,
+                li:not(:last-child){
+                    margin-right: 15px;
+                }
             }
         }
     }
