--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,4 +1,40 @@
+
 html,
 body{
     height: 100%;
+    background-color: #ebe8e8;
+    color: black;
+    font-size: 14px;
+}
+
+main{
+    max-width: 1200px;
+    margin: 0 auto;
+    min-height: 200px;
+}
+
+button,
+input:not([type="file"]),
+textarea,
+.fileUpload{
+    width: 100%;
+    border: none;
+    border-radius: 4px;
+    font-size: 14px;
+    max-width: 320px;
+    resize: none;
+    font-family: DoHyeon-Regular sans-serif;
+
+    &::placeholder{
+        font-weight: 400;
+
+    }
+    &:focus{
+        outline: none;
+    }
+}
+
+button,
+input[type="submit"]{
+    cursor:pointer;
 }
