--- a/views/videosDetail.pug
+++ b/views/videosDetail.pug
@@ -1,11 +1,12 @@
-include layout/main
+extends layout/main
 
 block content 
-    .video__player
-        video(src=`/${videos.fileUrl}`) 
-    .video__info
-        a(href=routes.videos+routes.videoEdite(videos.id)) 비디오 수정
-        h3.video__titele=videos.title
-        span.video__views=videos.views
-        p.video__description=videos.description
-           
+    .video-container
+        .video__player
+            video(src=`/${videos.fileUrl}`, controls=true) 
+        .video__info
+            a(href=routes.videos+routes.videoEdite(videos.id)) 
+                button 비디오 수정
+            h3.video__titele=videos.title
+            span.video__views=videos.views
+            p.video__description=videos.description
