--- a/assets/scss/pages/videoDetail.scss
+++ b/assets/scss/pages/videoDetail.scss
@@ -9,6 +9,28 @@
     .video__info{
         width: 100%;
         max-width: 900px;
+        
+        .video__title,
+        .video__views,
+        .video__description{
+            display: block;
+            margin-bottom:15px;
+        }
+        .video__title{
+            font-size: 28px;
+        }
+        .video__views{
+            font-size: 14px;
+        }
+        .video__description{
+            font-size: 19px;
+        }
+    }
+    .video__comments{
+        margin-top: 25px;
+        .video__comments-number{
+            font-size: 18px;
+        }
     }
     button{
         width: 100px;
