--- a/views/videosDetail.pug
+++ b/views/videosDetail.pug
@@ -7,6 +7,11 @@ block content
         .video__info
             a(href=routes.videos+routes.videoEdite(videos.id)) 
                 button 비디오 수정
-            h3.video__titele=videos.title
+            h3.video__title=videos.title
             span.video__views=videos.views
             p.video__description=videos.description
+        .video__comments
+            if videos.comments.length === 1
+                span.video__comments-number 1 comment
+            else 
+                span.video__comments-number #{videos.comments.length} comments
