--- a/assets/scss/config/reset.scss
+++ b/assets/scss/config/reset.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jua&display=swap');
 
 .icon{
  //background: url('videoIcon.png');
@@ -90,7 +91,7 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-family: DoHyeon-Regular sans-serif;
+  font-family: 'Jua', sans-serif;
   font-size: 100%;
   vertical-align: baseline;
 }
