--- a/assets/scss/partials/form.scss
+++ b/assets/scss/partials/form.scss
@@ -7,7 +7,8 @@
         width: 100%;
         max-width: 320px;
         margin-bottom: 50px;
-        input{
+        input:not([type="file"]),
+        .fileUpload{
             display: block;
             width: 100%;
             padding-top: 8px;
@@ -17,10 +18,23 @@
                 margin-bottom: 20px;
             }
         }
+        textarea{
+            box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+        }
         input[type="submit"]{
             background-color: #7C7CC4;
             font-weight: 800;
             color: rgb(216, 190, 190);
+        }
+        a{
+            max-width: 320px;
+            width: 100%;
+        }
+        .fileUpload{
+            label{
+                font-weight: 300px;
+                margin-right: 10px;
+            }
         }
     }
 }
